WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195448
Crash under RemoteLayerTreePropertyApplier::applyProperties
https://bugs.webkit.org/show_bug.cgi?id=195448
Summary
Crash under RemoteLayerTreePropertyApplier::applyProperties
Tim Horton
Reported
2019-03-07 18:39:11 PST
Crash under RemoteLayerTreePropertyApplier::applyProperties
Attachments
Patch
(2.14 KB, patch)
2019-03-07 18:41 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(37.33 KB, patch)
2019-03-12 06:43 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-03-07 18:41:15 PST
Created
attachment 363970
[details]
Patch
Tim Horton
Comment 2
2019-03-07 18:41:24 PST
<
rdar://problem/48588226
>
WebKit Commit Bot
Comment 3
2019-03-07 19:26:44 PST
Comment on
attachment 363970
[details]
Patch Clearing flags on attachment: 363970 Committed
r242629
: <
https://trac.webkit.org/changeset/242629
>
WebKit Commit Bot
Comment 4
2019-03-07 19:26:45 PST
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 5
2019-03-12 06:43:48 PDT
Created
attachment 364384
[details]
patch
Antti Koivisto
Comment 6
2019-03-12 06:54:09 PDT
Oops wrong bug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug