Cherry-pick r242629. rdar://problem/48716549

Crash under RemoteLayerTreePropertyApplier::applyProperties
    https://bugs.webkit.org/show_bug.cgi?id=195448
    <rdar://problem/48588226>

    Reviewed by Simon Fraser.

    * UIProcess/RemoteLayerTree/RemoteLayerTreeHost.mm:
    (WebKit::RemoteLayerTreeHost::updateLayerTree):
    Under some currently-unknown circumstances, the UI process is receiving
    commits referring to layers that it does not know about.
    One understood case of this was fixed in r241899, but there seem to be
    cases remaining that are not understood.
    Also, add a release log so that we can identify any downstream effects.

    Canonical link: https://commits.webkit.org/209767@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242629 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.360@safari-607.1.40.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607.1.40.0-branch@242648 268f45cc-cd09-0410-ab3c-d52691b4dbfc